--- a/Team Salaries.html
+++ b/Team Salaries.html
@@ -8,182 +8,182 @@
 <TD><FONT SIZE=2><B>Budget</FONT></B></FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>ANA</FONT></TD>
-<TD><FONT SIZE=2>72695000</FONT></TD>
-<TD><FONT SIZE=2>14661456</FONT></TD>
-<TD><FONT SIZE=2>87356456</FONT></TD>
+<TD><FONT SIZE=2>61432914</FONT></TD>
+<TD><FONT SIZE=2>11684744</FONT></TD>
+<TD><FONT SIZE=2>73117658</FONT></TD>
 <TD><FONT SIZE=2>91676250</FONT></TD>
 </TR><TR>
-<TD><FONT SIZE=2>WPG</FONT></TD>
-<TD><FONT SIZE=2>66232142</FONT></TD>
-<TD><FONT SIZE=2>10880745</FONT></TD>
-<TD><FONT SIZE=2>77112887</FONT></TD>
+<TD><FONT SIZE=2>CBS</FONT></TD>
+<TD><FONT SIZE=2>78233333</FONT></TD>
+<TD><FONT SIZE=2>6532246</FONT></TD>
+<TD><FONT SIZE=2>84765579</FONT></TD>
 <TD><FONT SIZE=2>87467497</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>BOS</FONT></TD>
-<TD><FONT SIZE=2>70902916</FONT></TD>
-<TD><FONT SIZE=2>14724165</FONT></TD>
-<TD><FONT SIZE=2>85627081</FONT></TD>
+<TD><FONT SIZE=2>57081665</FONT></TD>
+<TD><FONT SIZE=2>15728831</FONT></TD>
+<TD><FONT SIZE=2>72810496</FONT></TD>
 <TD><FONT SIZE=2>80124999</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>BUF</FONT></TD>
-<TD><FONT SIZE=2>67412024</FONT></TD>
-<TD><FONT SIZE=2>16357957</FONT></TD>
-<TD><FONT SIZE=2>83769981</FONT></TD>
+<TD><FONT SIZE=2>77245356</FONT></TD>
+<TD><FONT SIZE=2>12239832</FONT></TD>
+<TD><FONT SIZE=2>89485188</FONT></TD>
 <TD><FONT SIZE=2>89531607</FONT></TD>
 </TR><TR>
-<TD><FONT SIZE=2>CGY</FONT></TD>
-<TD><FONT SIZE=2>67020043</FONT></TD>
-<TD><FONT SIZE=2>15082872</FONT></TD>
-<TD><FONT SIZE=2>82102915</FONT></TD>
+<TD><FONT SIZE=2>CAL</FONT></TD>
+<TD><FONT SIZE=2>65689566</FONT></TD>
+<TD><FONT SIZE=2>6241080</FONT></TD>
+<TD><FONT SIZE=2>71930646</FONT></TD>
 <TD><FONT SIZE=2>81704625</FONT></TD>
 </TR><TR>
-<TD><FONT SIZE=2>HAR</FONT></TD>
-<TD><FONT SIZE=2>59339166</FONT></TD>
-<TD><FONT SIZE=2>13457664</FONT></TD>
-<TD><FONT SIZE=2>72796830</FONT></TD>
+<TD><FONT SIZE=2>CAR</FONT></TD>
+<TD><FONT SIZE=2>61993332</FONT></TD>
+<TD><FONT SIZE=2>13330204</FONT></TD>
+<TD><FONT SIZE=2>75323536</FONT></TD>
 <TD><FONT SIZE=2>76535416</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>CHI</FONT></TD>
-<TD><FONT SIZE=2>68413462</FONT></TD>
-<TD><FONT SIZE=2>12272663</FONT></TD>
-<TD><FONT SIZE=2>80686125</FONT></TD>
+<TD><FONT SIZE=2>77304295</FONT></TD>
+<TD><FONT SIZE=2>10453246</FONT></TD>
+<TD><FONT SIZE=2>87757541</FONT></TD>
 <TD><FONT SIZE=2>90099293</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>COL</FONT></TD>
-<TD><FONT SIZE=2>54201429</FONT></TD>
-<TD><FONT SIZE=2>14235749</FONT></TD>
-<TD><FONT SIZE=2>68437178</FONT></TD>
+<TD><FONT SIZE=2>61142947</FONT></TD>
+<TD><FONT SIZE=2>11046331</FONT></TD>
+<TD><FONT SIZE=2>72189278</FONT></TD>
 <TD><FONT SIZE=2>90468929</FONT></TD>
 </TR><TR>
-<TD><FONT SIZE=2>CBS</FONT></TD>
-<TD><FONT SIZE=2>74075832</FONT></TD>
-<TD><FONT SIZE=2>16167412</FONT></TD>
-<TD><FONT SIZE=2>90243244</FONT></TD>
+<TD><FONT SIZE=2>WPG</FONT></TD>
+<TD><FONT SIZE=2>68514167</FONT></TD>
+<TD><FONT SIZE=2>15336204</FONT></TD>
+<TD><FONT SIZE=2>83850371</FONT></TD>
 <TD><FONT SIZE=2>79293807</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>DAL</FONT></TD>
-<TD><FONT SIZE=2>71011667</FONT></TD>
-<TD><FONT SIZE=2>11926413</FONT></TD>
-<TD><FONT SIZE=2>82938080</FONT></TD>
+<TD><FONT SIZE=2>59727498</FONT></TD>
+<TD><FONT SIZE=2>12613535</FONT></TD>
+<TD><FONT SIZE=2>72341033</FONT></TD>
 <TD><FONT SIZE=2>92370521</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>DET</FONT></TD>
-<TD><FONT SIZE=2>60254167</FONT></TD>
-<TD><FONT SIZE=2>11109582</FONT></TD>
-<TD><FONT SIZE=2>71363749</FONT></TD>
+<TD><FONT SIZE=2>77174295</FONT></TD>
+<TD><FONT SIZE=2>11500953</FONT></TD>
+<TD><FONT SIZE=2>88675248</FONT></TD>
 <TD><FONT SIZE=2>89774167</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>EDM</FONT></TD>
-<TD><FONT SIZE=2>70637834</FONT></TD>
-<TD><FONT SIZE=2>9362207</FONT></TD>
-<TD><FONT SIZE=2>80000041</FONT></TD>
+<TD><FONT SIZE=2>68618519</FONT></TD>
+<TD><FONT SIZE=2>12810623</FONT></TD>
+<TD><FONT SIZE=2>81429142</FONT></TD>
 <TD><FONT SIZE=2>84333250</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>FLA</FONT></TD>
-<TD><FONT SIZE=2>64835833</FONT></TD>
-<TD><FONT SIZE=2>7442916</FONT></TD>
-<TD><FONT SIZE=2>72278749</FONT></TD>
+<TD><FONT SIZE=2>73319999</FONT></TD>
+<TD><FONT SIZE=2>14824748</FONT></TD>
+<TD><FONT SIZE=2>88144747</FONT></TD>
 <TD><FONT SIZE=2>81917499</FONT></TD>
 </TR><TR>
-<TD><FONT SIZE=2>LA</FONT></TD>
-<TD><FONT SIZE=2>72219394</FONT></TD>
-<TD><FONT SIZE=2>8491414</FONT></TD>
-<TD><FONT SIZE=2>80710808</FONT></TD>
+<TD><FONT SIZE=2>LAK</FONT></TD>
+<TD><FONT SIZE=2>72940079</FONT></TD>
+<TD><FONT SIZE=2>12719619</FONT></TD>
+<TD><FONT SIZE=2>85659698</FONT></TD>
 <TD><FONT SIZE=2>85623102</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>MIN</FONT></TD>
-<TD><FONT SIZE=2>70649424</FONT></TD>
-<TD><FONT SIZE=2>11104965</FONT></TD>
-<TD><FONT SIZE=2>81754389</FONT></TD>
+<TD><FONT SIZE=2>58205683</FONT></TD>
+<TD><FONT SIZE=2>16565165</FONT></TD>
+<TD><FONT SIZE=2>74770848</FONT></TD>
 <TD><FONT SIZE=2>86371257</FONT></TD>
 </TR><TR>
-<TD><FONT SIZE=2>MTL</FONT></TD>
-<TD><FONT SIZE=2>61767143</FONT></TD>
-<TD><FONT SIZE=2>9731244</FONT></TD>
-<TD><FONT SIZE=2>71498387</FONT></TD>
+<TD><FONT SIZE=2>MON</FONT></TD>
+<TD><FONT SIZE=2>76510179</FONT></TD>
+<TD><FONT SIZE=2>7475868</FONT></TD>
+<TD><FONT SIZE=2>83986047</FONT></TD>
 <TD><FONT SIZE=2>81497142</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>NYI</FONT></TD>
-<TD><FONT SIZE=2>67678333</FONT></TD>
-<TD><FONT SIZE=2>12053914</FONT></TD>
-<TD><FONT SIZE=2>79732247</FONT></TD>
+<TD><FONT SIZE=2>67095000</FONT></TD>
+<TD><FONT SIZE=2>8553908</FONT></TD>
+<TD><FONT SIZE=2>75648908</FONT></TD>
 <TD><FONT SIZE=2>82133332</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>NYR</FONT></TD>
-<TD><FONT SIZE=2>59905833</FONT></TD>
-<TD><FONT SIZE=2>9804165</FONT></TD>
-<TD><FONT SIZE=2>69709998</FONT></TD>
+<TD><FONT SIZE=2>62322499</FONT></TD>
+<TD><FONT SIZE=2>12602286</FONT></TD>
+<TD><FONT SIZE=2>74924785</FONT></TD>
 <TD><FONT SIZE=2>101940000</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>NAS</FONT></TD>
-<TD><FONT SIZE=2>66875708</FONT></TD>
-<TD><FONT SIZE=2>12378246</FONT></TD>
-<TD><FONT SIZE=2>79253954</FONT></TD>
+<TD><FONT SIZE=2>71448332</FONT></TD>
+<TD><FONT SIZE=2>6916913</FONT></TD>
+<TD><FONT SIZE=2>78365245</FONT></TD>
 <TD><FONT SIZE=2>76610706</FONT></TD>
 </TR><TR>
-<TD><FONT SIZE=2>QUE</FONT></TD>
-<TD><FONT SIZE=2>56668333</FONT></TD>
-<TD><FONT SIZE=2>12160663</FONT></TD>
-<TD><FONT SIZE=2>68828996</FONT></TD>
+<TD><FONT SIZE=2>NJD</FONT></TD>
+<TD><FONT SIZE=2>77190749</FONT></TD>
+<TD><FONT SIZE=2>10042995</FONT></TD>
+<TD><FONT SIZE=2>87233744</FONT></TD>
 <TD><FONT SIZE=2>80022499</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>OTT</FONT></TD>
-<TD><FONT SIZE=2>64300833</FONT></TD>
-<TD><FONT SIZE=2>11473913</FONT></TD>
-<TD><FONT SIZE=2>75774746</FONT></TD>
+<TD><FONT SIZE=2>76591667</FONT></TD>
+<TD><FONT SIZE=2>16482582</FONT></TD>
+<TD><FONT SIZE=2>93074249</FONT></TD>
 <TD><FONT SIZE=2>93681665</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>PHI</FONT></TD>
-<TD><FONT SIZE=2>66303334</FONT></TD>
-<TD><FONT SIZE=2>19230265</FONT></TD>
-<TD><FONT SIZE=2>85533599</FONT></TD>
+<TD><FONT SIZE=2>61721666</FONT></TD>
+<TD><FONT SIZE=2>12885165</FONT></TD>
+<TD><FONT SIZE=2>74606831</FONT></TD>
 <TD><FONT SIZE=2>89990683</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>VGK</FONT></TD>
-<TD><FONT SIZE=2>52338333</FONT></TD>
-<TD><FONT SIZE=2>24082292</FONT></TD>
-<TD><FONT SIZE=2>76420625</FONT></TD>
+<TD><FONT SIZE=2>54969167</FONT></TD>
+<TD><FONT SIZE=2>11374745</FONT></TD>
+<TD><FONT SIZE=2>66343912</FONT></TD>
 <TD><FONT SIZE=2>68607497</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>PIT</FONT></TD>
-<TD><FONT SIZE=2>74697188</FONT></TD>
-<TD><FONT SIZE=2>13054416</FONT></TD>
-<TD><FONT SIZE=2>87751604</FONT></TD>
+<TD><FONT SIZE=2>77325833</FONT></TD>
+<TD><FONT SIZE=2>12960166</FONT></TD>
+<TD><FONT SIZE=2>90285999</FONT></TD>
 <TD><FONT SIZE=2>91033333</FONT></TD>
 </TR><TR>
-<TD><FONT SIZE=2>SJ</FONT></TD>
-<TD><FONT SIZE=2>76999167</FONT></TD>
-<TD><FONT SIZE=2>10978748</FONT></TD>
-<TD><FONT SIZE=2>87977915</FONT></TD>
+<TD><FONT SIZE=2>SJS</FONT></TD>
+<TD><FONT SIZE=2>69662977</FONT></TD>
+<TD><FONT SIZE=2>15991331</FONT></TD>
+<TD><FONT SIZE=2>85654308</FONT></TD>
 <TD><FONT SIZE=2>93021251</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>STL</FONT></TD>
-<TD><FONT SIZE=2>63519167</FONT></TD>
-<TD><FONT SIZE=2>12741083</FONT></TD>
-<TD><FONT SIZE=2>76260250</FONT></TD>
-<TD><FONT SIZE=2>101085834</FONT></TD>
+<TD><FONT SIZE=2>72125833</FONT></TD>
+<TD><FONT SIZE=2>10794749</FONT></TD>
+<TD><FONT SIZE=2>82920582</FONT></TD>
+<TD><FONT SIZE=2>96085834</FONT></TD>
 </TR><TR>
-<TD><FONT SIZE=2>TB</FONT></TD>
-<TD><FONT SIZE=2>71440834</FONT></TD>
-<TD><FONT SIZE=2>21711605</FONT></TD>
-<TD><FONT SIZE=2>93152439</FONT></TD>
+<TD><FONT SIZE=2>TBL</FONT></TD>
+<TD><FONT SIZE=2>67372499</FONT></TD>
+<TD><FONT SIZE=2>16406491</FONT></TD>
+<TD><FONT SIZE=2>83778990</FONT></TD>
 <TD><FONT SIZE=2>80763702</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>TOR</FONT></TD>
-<TD><FONT SIZE=2>60440000</FONT></TD>
-<TD><FONT SIZE=2>18339331</FONT></TD>
-<TD><FONT SIZE=2>78779331</FONT></TD>
+<TD><FONT SIZE=2>71120833</FONT></TD>
+<TD><FONT SIZE=2>12587166</FONT></TD>
+<TD><FONT SIZE=2>83707999</FONT></TD>
 <TD><FONT SIZE=2>89737499</FONT></TD>
 </TR><TR>
 <TD><FONT SIZE=2>VAN</FONT></TD>
-<TD><FONT SIZE=2>65130000</FONT></TD>
-<TD><FONT SIZE=2>17085666</FONT></TD>
-<TD><FONT SIZE=2>82215666</FONT></TD>
+<TD><FONT SIZE=2>56023398</FONT></TD>
+<TD><FONT SIZE=2>14524326</FONT></TD>
+<TD><FONT SIZE=2>70547724</FONT></TD>
 <TD><FONT SIZE=2>85364167</FONT></TD>
 </TR><TR>
-<TD><FONT SIZE=2>WSH</FONT></TD>
-<TD><FONT SIZE=2>72115129</FONT></TD>
-<TD><FONT SIZE=2>11389964</FONT></TD>
-<TD><FONT SIZE=2>83505093</FONT></TD>
+<TD><FONT SIZE=2>WAS</FONT></TD>
+<TD><FONT SIZE=2>77302795</FONT></TD>
+<TD><FONT SIZE=2>6089747</FONT></TD>
+<TD><FONT SIZE=2>83392542</FONT></TD>
 <TD><FONT SIZE=2>99816961</FONT></TD>
 </TR></TABLE></HTML>
